Improved client side validation, styling
